# permit-demo

./: .gitignore  README.md  justfile  pyproject.toml  pytest.ini
src/: config.py  permit.py
test/: test_permit.py
